--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,21 @@
 	<link rel="stylesheet" type="text/css" href="./lib/font-awesome/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./lib/jquery-ui/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./lib/autoComplete/style.css">
+	<link rel="stylesheet" type="text/css" href="./lib/spectrum/spectrum.css">
 	<link rel="stylesheet" type="text/css" href="./style.css">
+	<link rel="stylesheet" type="text/css" href="./edit.css">
 
 	<script type="text/javascript" src="./lib/jquery/jquery-3.2.0.js"></script>
 	<script type="text/javascript" src="./lib/jquery-ui/jquery-ui.js"></script>
 	<script type="text/javascript" src="./lib/kojs/knockout.debug.js"></script>
 	<script type="text/javascript" src="./bootstrap/js/bootstrap.js"></script>
+	<script type="text/javascript" src="./lib/nestedSortable/jquery.mjs.nestedSortable.js"></script>
+    <script type="text/javascript" src="./lib/autoComplete/autocomplete.js"></script>
+	<script type="text/javascript" src="./lib/spectrum/spectrum.js"></script>
+	<script type="text/javascript" src="./lib/formathtml/formathtml.js"></script>
 </head>
+
 <body>
 	<div class="titlebar">
 	</div>
@@ -23,17 +31,45 @@
 	</div>
 	<div class="wfb-alert"></div>
 <!-- 	<script type="text/javascript">
-		nw.Window.get().evalNWBin(null, './lib/wfb-main/service.bin');
+		nw.Window.get().evalNWBin(null, './frameworks/cssrules.bin');
+		nw.Window.get().evalNWBin(null, './frameworks/bootstrap3.3.7/load.bin');
+		
+		nw.Window.get().evalNWBin(null, './lib/wfb-main/crsa-pages.bin');
+		nw.Window.get().evalNWBin(null, './lib/wfb-main/crsa-store.bin');
+		nw.Window.get().evalNWBin(null, './lib/wfb-main/dbservice.bin');
+		nw.Window.get().evalNWBin(null, './lib/wfb-main/i_server.bin');
+		nw.Window.get().evalNWBin(null, './lib/wfb-main/helper.bin');
+		nw.Window.get().evalNWBin(null, './lib/wfb-main/pg-components.bin');
+		nw.Window.get().evalNWBin(null, './lib/wfb-main/pg-parser.bin');
+		nw.Window.get().evalNWBin(null, './lib/wfb-main/pg-query.bin');
 		nw.Window.get().evalNWBin(null, './lib/wfb-main/templates.bin');
 		nw.Window.get().evalNWBin(null, './lib/wfb-main/viewmodel.bin');
+		nw.Window.get().evalNWBin(null, './lib/wfb-main/crsa.css.bin');
+		nw.Window.get().evalNWBin(null, './lib/wfb-main/crsa.undo.bin');
 		nw.Window.get().evalNWBin(null, './lib/wfb-main/main.bin');
-	</script> -->
-	<script type="text/javascript" src="./lib/wfb-main/service.js"></script>
+	</script>
+ -->
+	<script type="text/javascript" src="frameworks/cssrules.js"></script>
+	<script type="text/javascript" src="./frameworks/bootstrap3.3.7/load.js"></script>
+
+	<script type="text/javascript" src="./lib/wfb-main/crsa-pages.js"></script>
+	<script type="text/javascript" src="./lib/wfb-main/crsa-store.js"></script>
+	<script type="text/javascript" src="./lib/wfb-main/dbservice.js"></script>
+	<script type="text/javascript" src="./lib/wfb-main/i_server.js"></script>
+	<script type="text/javascript" src="./lib/wfb-main/helper.js"></script>
+	<script type="text/javascript" src="./lib/wfb-main/pg-components.js"></script>
+	<script type="text/javascript" src="./lib/wfb-main/pg-parser.js"></script>
+	<script type="text/javascript" src="./lib/wfb-main/pg-query.js"></script>
 	<script type="text/javascript" src="./lib/wfb-main/templates.js"></script>
 	<script type="text/javascript" src="./lib/wfb-main/viewmodel.js"></script>
+	<script type="text/javascript" src="./lib/wfb-main/crsa.css.js"></script>
+	<script type="text/javascript" src="./lib/wfb-main/crsa.undo.js"></script>
 	<script type="text/javascript" src="./lib/wfb-main/main.js"></script>
 	<script type="text/javascript">
+		wfbuilder.init();
 		wfbuilder.go_startup();
+
+		gui.Window.get().maximize();
 	</script>
 </body>
 </html>
